--- a/laiqu/src/main/res/values/strings.xml
+++ b/laiqu/src/main/res/values/strings.xml
@@ -186,4 +186,7 @@
     </string>
     <string name="male">男</string>
     <string name="female">女</string>
+    <string name="personalized_signature">个性签名</string>
+    <string name="taste_preference">口味偏好</string>
+    <string name="select_birth_date">选择出生日期</string>
 </resources>
