--- a/fanqu/src/main/res/values/strings.xml
+++ b/fanqu/src/main/res/values/strings.xml
@@ -11,7 +11,7 @@
     <string name="login">登录</string>
     <string name="prompt_phone">手机号</string>
     <string name="prompt_password">密码</string>
-    <string name="third_login">第三方登陆</string>
+    <string name="third_login">使用其他帐号登陆</string>
     <string name="wechat_name">微信</string>
     <string name="qq_name">QQ</string>
     <string name="weibo_name">微博</string>
@@ -275,6 +275,7 @@
     <string name="save">保存</string>
     <string name="cancel">取消</string>
     <string name="search">搜索</string>
+    <string name="mine_wallet">我的钱包</string>
     <!--口味偏好默认的stringarray集合-->
     <string-array name="taste_preference_string_array">
         <item>清淡</item>
