第一次提交

--- a/fanqu/src/main/res/values/strings.xml
+++ b/fanqu/src/main/res/values/strings.xml
@@ -331,6 +331,13 @@
     <string name="coupon_exceed_minus">满  减</string>
     <string name="more_coupon_goto_coupon_centre">跟多好券，去领券中心看看</string>
     <string name="get_coupon_centre">领券中心</string>
+    <string name="couponl_detail">优惠券详情</string>
+    <string name="promotion_code">优惠码</string>
+    <string name="ensure_use">去使用</string>
+    <string name="couponl_instructions">使用说明</string>
+    <string name="couponl_instructions_content">1.可以在订单支付的时使用；\n2.无法转赠他人，仅限本账号使用；\n3.单笔交易仅使用1张，若交易失败，则自动退回；</string>
+    <string name="effective_date">有效日期：</string>
+    <string name="until">至</string>
     <!--口味偏好默认的stringarray集合-->
     <string-array name="taste_preference_string_array">
         <item>清淡</item>
