--- a/fanqu/src/main/res/values/strings.xml
+++ b/fanqu/src/main/res/values/strings.xml
@@ -339,6 +339,10 @@
     <string name="effective_date">有效日期：</string>
     <string name="until">至</string>
     <string name="immediately_get_coupont">立即领取</string>
+    <string name="has_get">已领</string>
+    <string name="mine_attention_dinner_party">我的关注</string>
+    <string name="rest">休息中</string>
+    <string name="rise">起</string>
     <!--口味偏好默认的stringarray集合-->
     <string-array name="taste_preference_string_array">
         <item>清淡</item>
