--- a/fanqu/src/main/res/values/strings.xml
+++ b/fanqu/src/main/res/values/strings.xml
@@ -415,6 +415,13 @@
     <string name="total_number_people">(共%1$s位)</string>
     <string name="available_discount_coupon">可用优惠券</string>
     <string name="invalid_phone_number">请输入正确的11位手机号码</string>
+    <string name="error">蹭范趣平台开了小菜请稍后再试！</string>
+    <string name="register_succeed">注册成功</string>
+    <string name="hint">提示</string>
+    <string name="please_bind_phone_number">请绑定手机号</string>
+    <string name="binding_mobile_phone_number">绑定手机号码</string>
+    <string name="mport_phone_number_error">手机号码不能为空</string>
+    <string name="tip_exist_application">在按一次退出应用</string>
     <!--口味偏好默认的stringarray集合-->
     <string-array name="taste_preference_string_array">
         <item>清淡</item>
